[package]
name = "dxgi-proxy"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
simplelog = "0.12"
once_cell = "1"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_Console",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
]

[profile.release]
opt-level = 3
lto = true
strip = "symbols"
